--- a/src/blocks/partners/partners.pug
+++ b/src/blocks/partners/partners.pug
@@ -20,4 +20,4 @@ mixin partners(modifier)
           h3.partners__name Компания-партнёра 5
         li.partners__item
           img.partners__logo(src="img/logo_partner6.svg", alt="Logo")
-          h3.partners__name Партнер 6 с длинным названием
+          h3.partners__name Партнер 6 с&nbsp;длинным&nbsp;названием
