--- a/src/blocks/info/info.pug
+++ b/src/blocks/info/info.pug
@@ -10,8 +10,8 @@ mixin info(modifier)
 					.info__accordion-area
 						p.info__text Для поиска укажите номера водительского удостоверения и свидетельства о регистрации ТС или номер штрафа.
 						p.info__text Если у вас есть на руках постановление о штрафе, вы можете указать реквизиты самостоятельно.
-						h3.info__subtitle Платить вовремя дешевле!
-						p.info__text В первые 20 дней после выдачи постановления штраф можно оплатить со&nbsp;скидкой 50%. Для своевременной оплаты штрафов настройте уведомления в Личном кабинете.
+						h3.info__subtitle Платить вовремя — дешевле! 
+						p.info__text В первые 20 дней после выдачи постановления штраф можно оплатить со&nbsp;скидкой 50%.&nbsp;&nbsp;Для своевременной оплаты штрафов настройте уведомления в Личном кабинете.
 				img.info__image(src="img/pic_block1.png", alt="Picture")
 			li.info__item(id="court-debts")
 				.info__content
@@ -33,7 +33,6 @@ mixin info(modifier)
 						include ./img/ic_arrow.svg
 					.info__accordion-area
 						p.info__text Для поиска начислений по налогам в ГИС ГМП укажите ИНН или Индекс налогового документа, если у вас на руках есть квитанция.
-						p.info__text Вы можете указать реквизиты платежа самостоятельно, заполнив форму.
 						h3.info__subtitle Важно!
 						p.info__text Согласно законодательству РФ вы не можете оплачивать налоги за других физических лиц. Принимаются только платежи физических лиц.
 				img.info__image(src="img/pic_block3.png", alt="Picture")
