--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -6,7 +6,7 @@
         width: 100%;
         max-width: 960px;
         margin: 0px auto;
-        padding: 60px 0px;
+        padding: 61px 0px;
         &:nth-of-type(2n+2) {
             flex-direction: row-reverse;
         }
@@ -36,7 +36,7 @@
         font-weight: 400;
     }
     &__subtitle {
-        margin-top: 37px;
+        margin-top: 33px;
         font-size: 1em;
         line-height: lh-to-pct(24, 16);
         font-weight: 700;
@@ -78,7 +78,7 @@
             justify-content: space-between;
             align-items: center;
             min-width: 100%;
-            padding: 6px 0px;
+            padding: 6px 0px 5px;
             transition: 0.3s;
             svg {
                 display: block;
