--- a/src/blocks/modal/modal.scss
+++ b/src/blocks/modal/modal.scss
@@ -18,6 +18,7 @@
         flex-direction: column;
         align-items: flex-start;
         min-width: 400px;
+        max-height: 469px;
         padding: 40px;
         background-color: #fff;
         box-shadow: 0px 3px 6px #00000029;
@@ -44,7 +45,7 @@
     }
     &__title {
         max-width: 267px;
-        margin-bottom: 32px;
+        margin-bottom: 29px;
         font-size: 1em;
         line-height: lh-to-pct(24, 16);
         font-weight: 700;
@@ -55,8 +56,8 @@
         width: 100%;
     }
     &__field {
-        margin-bottom: 16px;
-        padding: 19px 24px;
+        margin-bottom: 15px;
+        padding: 18px 24px;
         border: 2px solid #00468533;
         border-radius: 8px;
         outline: none;
@@ -76,7 +77,7 @@
         }  
     }
     &__btn-enter {
-        margin: 7px 0px 32px;
+        margin: 7px 0px 29px;
         padding: 14px 32px 13px;
         border: none;
         border-radius: 8px;
@@ -93,7 +94,7 @@
     }
     &__link {
         &:nth-of-type(n+2) {
-            margin-top: 16px;
+            margin-top: 13px;
         }
         border-bottom: 1px dotted #004685;
         font-size: px-to-em(16);
