--- a/src/blocks/partners/partners.scss
+++ b/src/blocks/partners/partners.scss
@@ -6,10 +6,10 @@
         width: 100%;
         max-width: 960px;
         margin: 0px auto;
-        padding: 62px 0px 60px;
+        padding: 58px 0px 60px;
     }
     &__title {
-        margin-bottom: 53px;
+        margin-bottom: 51px;
         font-size: px-to-em(36);
         line-height: lh-to-pct(49, 36);
         font-weight: 600;
@@ -33,7 +33,7 @@
     }
     @media screen and (max-width: 991px) {
         &__area {
-            padding: 28px 20px 32px;
+            padding: 28px 20px 35px;
         }
         &__list {
             flex-wrap: wrap;
@@ -50,12 +50,15 @@
             line-height: lh-to-pct(27, 20);
         }
         &__list {
-            gap: 32px 24px;
+            gap: 33px 24px;
+        }
+        &__name {
+            margin-top: 7px;
         }
     }
     @media screen and (max-width: 360px) {
         &__list {
-            gap: 12px 6px;
+            gap: 33px 22px;
         }
     }
 }
